--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.10.2",
+    "@react-navigation/drawer": "^7.1.1",
+    "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.11",
+    "expo-font": "~13.0.2",
     "expo-screen-orientation": "^8.0.2",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.3",
-    "react-native-safe-area-context": "^4.14.0",
+    "react-native-gesture-handler": "^2.21.2",
+    "react-native-paper": "^5.12.5",
+    "react-native-reanimated": "^3.16.6",
+    "react-native-safe-area-context": "^5.0.0",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
